# mong-mcp-server

./: LICENSE  README.md  pyproject.toml
mong_mcp_server/: __main__.py  server.py
