[project]
name = "mong-mcp-server"
version = "0.1.0"
description = "A Docker-like name generator MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.8.1",
    "mong>=0.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mong_mcp_server"]

[project.scripts]
mong-mcp = "mong_mcp_server.server:main"
